use gradle as build system